fix styling and spacing on various pages

--- a/src/CardPreview/CardPreview.css
+++ b/src/CardPreview/CardPreview.css
@@ -8,9 +8,11 @@
 .EditFlashcardButton {
     margin-bottom: 10px;
     margin-top: 10px;
+    margin-right: 1px;
 }
 
 .DeleteFlashcardButton {
     margin-bottom: 10px;
     margin-top: 10px;
+    margin-left: 1px;
 }
