--- a/src/NewCardForm/NewCardForm.css
+++ b/src/NewCardForm/NewCardForm.css
@@ -3,6 +3,7 @@
     min-height: 250px;
     background-color: white;
     border: 1px solid lightgray;
+    margin-top: 25px;
     padding-top: 25px;
     padding-bottom: 25px;
     padding-left: 25px;
